# X-Bot

./: .gitignore  LICENSE  Projeto-X-Bot.xlsx  README.md  bot.py  classes.py  cli.py  firebase.py  main.py  prompt.txt  pyproject.toml  pytest.ini  requirements.txt  xbot_class.py
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml  tests.yml  xbot-flow.yml
src/: aux_classes.py  cli.py  main.py  test_aux_classes.py  test_xbot_class.py  xbot_class.py
src/x_bot/: cli.py  groqcloud.py  main.py  product.py  twilio_.py  xbot_class.py
tests/: test_aux_classes.py  test_cli.py  test_groqcloud.py  test_product.py  test_twilio.py  test_xbot.py  test_xbot_class.py
