[project]
name = "x-bot"
version = "0.1.0"
description = "X-Bot is a Twitter/X automation bot that posts promotional tweets using data stored in Firebase, generates text with AI via Groq Cloud, and sends notifications via SMS with the Twilio API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "firebase-admin>=7.1.0",
    "langchain-core>=0.3.72",
    "langchain-groq>=0.3.6",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "tweepy>=4.16.0",
    "twilio>=9.7.0",
]
